# thecollector

./: .gitignore  README.org  pyproject.toml  requirements.txt  run.py
thecollector/: __init__.py  __main__.py  app.py  babel.py  env.example.json  forms.py  helpers.py  messages.pot  models.py  routes.py  todo.org  validators.py
thecollector/db/: __init__.py  helper.py  models.py
thecollector/templates/: form.html  guideline.html  layout.html  test_guideline.html
thecollector/translations/: messages.pot
thecollector/translations/en/LC_MESSAGES/: messages.mo  messages.po
thecollector/translations/fa/LC_MESSAGES/: messages.mo  messages.po
