[tool.poetry]
name = "thecollector"
version = "0.1.0"
description = ""
authors = ["M. Yas. Davoodeh <MYDavoodeh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Babel = "^2.0.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^0.14.3"
SQLAlchemy-serializer = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
